...

  val householdToDelete by deletionConfirmationViewModel.householdToEdit.collectAsState()

  if (showDeleteDialog) {
    AlertDialog(
        onDismissRequest = { onDismiss() },
        title = { Text("Delete Household") },
        text = { Text("Are you sure you want to delete '${householdToDelete!!.name}'?") },
        modifier = Modifier.testTag("DeleteConfirmationDialog"),
        confirmButton = {
          TextButton(
              onClick = {
                deletionConfirmationViewModel.deleteHouseholdById(householdToDelete!!.uid)
                onConfirm()
              },
              modifier = Modifier.testTag("confirmDeleteHouseholdButton")) {
                Text("Delete", color = MaterialTheme.colorScheme.error)
              }
        },
        dismissButton = {
          TextButton(
              onClick = { onDismiss() },
              modifier = Modifier.testTag("cancelDeleteHouseholdButton")) {
                Text("Cancel")
              }
        })
  }
}

