...
          ),
      label = {
        Row(verticalAlignment = Alignment.CenterVertically, modifier = Modifier.fillMaxWidth()) {
          if (editMode) {
            // Edit button on the left
            IconButton(
                modifier = Modifier.testTag("editHouseholdIndicatorIcon"),
                onClick = { onHouseholdEditSelected(household) }) {
                  Icon(
                      imageVector = Icons.Outlined.Edit,
                      contentDescription = "Edit Icon",
                  )
                }
...
                  if (household == selectedHousehold) MaterialTheme.colorScheme.primary
                  else Color.Unspecified,
              modifier = Modifier.weight(1f).padding(start = if (editMode) 8.dp else 0.dp))
          if (editMode) {
            // Delete button on the right
            IconButton(
                modifier = Modifier.testTag("deleteHouseholdIcon"),
                onClick = { onHouseholdDeleteSelected(household) }) {
                  Icon(
                      imageVector = Icons.Outlined.Delete,
                      contentDescription = "Delete Icon",
                      tint = MaterialTheme.colorScheme.error)
                }
...
