...
            HorizontalDivider(modifier = Modifier.padding(horizontal = 16.dp))
            Row(
                modifier = Modifier.fillMaxWidth().padding(16.dp),
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.Center) {
                  IconButton(
                      modifier = Modifier.testTag("addHouseholdIcon"),
                      onClick = {
                        householdSelectionDrawerViewModel.selectHouseholdToEdit(null)
                        navigationActions.navigateTo(Screen.HOUSEHOLD_CREATION)
                      }) {
                        Icon(
                            imageVector = Icons.Default.Add,
                            contentDescription = "Add Household Icon",
                        )
                      }

                  IconButton(
                      modifier = Modifier.testTag("editHouseholdIcon"),
                      onClick = { editMode = !editMode }) {
                        Icon(
                            imageVector = Icons.Outlined.Edit,
                            contentDescription = "Edit Household Icon",
                        )
                      }
...
